@@ -1,5 +1,9 @@
 2025-09-24  Zhengyi Fu  <i@fuzy.me>
 
+	* site-lisp/flymake-define.el (flymake-define): Remove condition-case.
+
+2025-09-24  Zhengyi Fu  <i@fuzy.me>
+
 	Limit savehist saved kill-ring entries
 
 	* init.el (savehist-additional-variables): Limit maximum saved
